[tool.poetry]
name = "Search_people_linkedin_api"
version = "0.1.0"
description = "Use linkedin api to search people"
authors = ["Francisco Ospina <francisco.ospina@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "^1.4.2"
linkedin-api = "^1.1.0"
notebook = "^6.4.11"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
